unused/kube/manifests/minecraft/minecraft/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
  labels:
    app: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
        - name: minecraft
          image: itzg/minecraft-server
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            privileged: true
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 25565
          volumeMounts:
            - mountPath: /data
              name: minecraft-data
            - mountPath: /data/ops.json
              name: mc-config
              subPath: ops.json
      volumes:
        - name: minecraft-data
          persistentVolumeClaim:
            claimName: mc-data-pvc
        - name: mc-config
          configMap:
            name: minecraft-config
