unused/kube/manifests/minecraft/minecraft/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service
spec:
  type: NodePort
  selector:
    app: minecraft
  ports:
    - name: mc-rcon
      protocol: TCP
      port: 25575
      targetPort: 25575
      nodePort: 30012
    - name: mc
      protocol: TCP
      port: 25565
      targetPort: 25565
      nodePort: 30011
